--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>Conertisseur de données</title>
+   
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+   
     <link rel="stylesheet" href="style/style.css">
+   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
     <script src="script/currency.js"></script>
     <script src="script/distance.js"></script>
 </head>
@@ -19,11 +24,11 @@
     <form class="distance_form">
         <div class="form-group">
             <label for="input_km">Valeur en kilomètres</label>
-            <input type="text" class="form-control" id="input_km" placeholder="ex: 20 km">
+            <input type="text" class="form-control" id="input_km" data-value=1.6 placeholder="ex: 1 km">
         </div>
         <div class="form-group">
-            <label for="input_m">Valeur en mètres</label>
-            <input type="text" class="form-control" id="input_m" placeholder="ex: 20 000 m">
+            <label for="input_m">Valeur en miles</label>
+            <input type="text" class="form-control" id="input_m" data-value=0.62 placeholder="ex: 0.62 m">
         </div>
     </form>
     <br>
@@ -31,11 +36,11 @@
     <form class="currency_form">
         <div class="form-group">
             <label for="input_euro">Valeur en €</label>
-            <input type="text" class="form-control" id="input_km" placeholder="ex: 10 €">
+            <input type="text" class="form-control" id="input_e" data-value=1.14 placeholder="ex: 10 €">
         </div>
         <div class="form-group">
             <label for="input_dollar">Valeur en $</label>
-            <input type="text" class="form-control" id="input_m" placeholder="ex: 11,4 $">
+            <input type="text" class="form-control" id="input_d" data-value=0.88 placeholder="ex: 11,4 $">
         </div>
     </form>
 </body>
