--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <form class="distance_form">
         <div class="form-group">
             <label for="input_km">Valeur en kilomètres</label>
-            <input type="text" class="form-control" id="input_km" data-value=1.6 placeholder="ex: 1 km">
+            <input type="text" class="form-control" id="input_km" data-value=1 placeholder="ex: 1 km">
         </div>
         <div class="form-group">
             <label for="input_m">Valeur en miles</label>
@@ -34,12 +34,22 @@
     <h3>Devises</h3>
     <form class="currency_form">
         <div class="form-group">
-            <label for="input_euro">Valeur en €</label>
-            <input type="text" class="form-control" id="input_e" data-value=1.14 placeholder="ex: 10 €">
+            <select>
+                <option selected="selected" value="1">Euros</option>
+                <option value="1.14">Dollars</option>
+                <option value=124.15>Yen</option>
+                <option value="0.88">Pound</option>
+            </select>
+            <input type="text" class="form-control" id="input_e" data-value=1 value="1">
         </div>
         <div class="form-group">
-            <label for="input_dollar">Valeur en $</label>
-            <input type="text" class="form-control" id="input_d" data-value=0.88 placeholder="ex: 11,4 $">
+            <select>
+                <option value="1">Euros</option>
+                <option selected="selected" value="1.14">Dollars</option>
+                <option value=124.16>Yen</option>
+                <option value="0.88">Pound</option>
+            </select>
+            <input type="text" class="form-control" id="input_d" data-value=1.14 value="1.14">
         </div>
     </form>
 </body>
