--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <h3>Distances</h3>
     <form class="distance_form">
         <div class="form-group">
-            <label for="input_km">Valeur en kilomètres</label>
+            <label for="input_km">Valeur en KILOMETRES</label>
             <input type="text" class="form-control" id="input_km" data-value=1 placeholder="ex: 1 km">
         </div>
         <div class="form-group">
-            <label for="input_m">Valeur en miles</label>
+            <label for="input_m">Valeur en MILES</label>
             <input type="text" class="form-control" id="input_m" data-value=0.62 placeholder="ex: 0.62 m">
         </div>
     </form>
