--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Conertisseur de données</title>
-   
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-   
+
     <link rel="stylesheet" href="style/style.css">
-   
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
@@ -35,19 +35,19 @@
     <form class="currency_form">
         <div class="form-group">
             <select>
-                <option selected="selected" value="1">Euros</option>
-                <option value="1.14">Dollars</option>
-                <option value=124.15>Yen</option>
-                <option value="0.88">Pound</option>
+                <option selected="selected" value="1">€ - Euros</option>
+                <option value="1.14">$ - Dollars</option>
+                <option value=124.15>¥ - Yen</option>
+                <option value="0.88">£ - Pound</option>
             </select>
             <input type="text" class="form-control" id="input_e" data-value=1 value="1">
         </div>
         <div class="form-group">
             <select>
-                <option value="1">Euros</option>
-                <option selected="selected" value="1.14">Dollars</option>
-                <option value=124.16>Yen</option>
-                <option value="0.88">Pound</option>
+                <option value="1">€ - Euros</option>
+                <option selected="selected" value="1.14">$ - Dollars</option>
+                <option value=124.16>¥ - Yen</option>
+                <option value="0.88">£ - Pound</option>
             </select>
             <input type="text" class="form-control" id="input_d" data-value=1.14 value="1.14">
         </div>
